editor-components/contacts/form2/form2.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  position: relative;
  height: 120vh;

  .background-media {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
    object-fit: cover;
  }

  .overlay {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 1;
    width: 100%;
    height: 100%;
    background-color: var(--composer-overlay-color);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  .max-content {
    height: 100%;
    z-index: 5;

    .input-items {
      .input-item {
        width: 100%;
        z-index: 1;
        max-width: 960px;
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        box-shadow: var(--box-shadow-active);
        padding: var(--composer-gap-xl);
        gap: var(--composer-gap-md);
        border-radius: var(--composer-border-radius-md);
        background: rgba(0, 0, 0, 0.52);
        backdrop-filter: blur(4.1px);
        -webkit-backdrop-filter: blur(4.1px);

        &.input-item-no-image {
          background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
        }

        .header {
          margin: 0;
          padding: 0 var(--composer-gap-xl);

          .subtitle,
          .title {

            &.subtitle-with-image,
            &.title-with-image {
              color: white;
              background: transparent;

              &::before {
                background: white;
              }
            }

            &.subtitle-badge {
              transform: translateX(0);

              &.subtitle-with-image {
                padding: 0;
              }
            }
          }

          .description {
            &.description-with-image {
              color: white;
            }
          }
        }

        .form {
          display: flex;
          flex-direction: column;
          gap: var(--composer-gap-sm);
          padding: 0 var(--composer-gap-xl);

          .input-container {
            position: relative;

            .error-message {
              text-align: left;
              margin-top: var(--composer-gap-xs);
              color: var(--composer-danger-color);
            }

            .placeholder {
              position: absolute;
              top: var(--composer-gap-xs);
              left: var(--composer-gap-sm);
              transition: all 0.3s ease;
              pointer-events: none;
              color: white;
              width: fit-content;
              font-size: 0.75rem;

              &.placeholder-no-image {
                color: var(--composer-font-color-primary);
              }
            }

            .input {
              width: 100%;
              min-height: var(--composer-gap-xl);
              border-radius: var(--composer-border-radius-sm);
              transition: border-color 0.3s ease;
              background-color: rgba(255, 255, 255, 0);
              padding-left: var(--composer-gap-sm);
              outline: none;
              border: 1px solid gray;
              color: white;
              padding-top: var(--composer-gap-sm);

              &.input-no-image {
                color: var(--composer-font-color-primary);
                border: 1px solid var(--composer-font-color-primary);
              }

              &.textarea {
                padding-top: var(--composer-gap-md);
                font-family: inherit;
                min-height: 130px;
                max-height: 200px;
                max-width: 100%;
              }
            }
          }
        }

        .button {
          width: 100% !important;
          display: flex !important;
          justify-content: center !important;
          align-items: center !important;
          text-align: center !important;

          .button-text {
            text-align: center !important;
            margin: 0 !important;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .input-items {
        .input-item {
          max-width: 700px;
          max-height: 700px;
          gap: 0;

          .form {
            padding: var(--composer-gap-md) var(--composer-gap-lg);
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .input-items {
        .input-item {
          max-width: 320px;
          padding: var(--composer-gap-md);
          gap: 0;

          .header {
            padding: 0 var(--composer-gap-md);
          }

          .form {
            padding: var(--composer-gap-md);
          }
        }
      }
    }
  }
}

